--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost/black_wolf_cinema
+#
+# JDBC properties
+#
+spring.datasource.url=jdbc:mysql://localhost:3306/cinemaRoomDB
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=paulina21
